@@ -1,3 +1,11 @@
+2010-10-15  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-default-xsd-types)
+	(soap-default-soapenc-types): add base64Binary basic type
+	(soap-decode-any-type): new defun
+	(soap-decode-basic-type): decode anyType nodes and base64Binary
+	(soap-parse-response): bind the wsdl to *current-wsdl*
+
 2010-10-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (*soap-encoded-namespaces*): doc update
